--- a/OTP_Veri/index.html
+++ b/OTP_Veri/index.html
@@ -1,116 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>OTP Verified </title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OTP Verification</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <style>
-    body {
-        background-color: #1A345D;
+      body {
+        background-color: #1a345d;
+        margin: 0;
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
-        margin: 0;
-    }
+      }
 
-    .content-wrapper {
+      .content-wrapper {
         display: flex;
         width: 93%;
-        max-width: 3000px;
-        height: 320px; /* Fixed height */
+        max-width: 1400px;
+        height: 350px;
         background-color: white;
         border-radius: 15px;
         overflow: hidden;
         box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
-    }
+      }
 
-    .left-section {
+      .left-section {
         width: 50%;
-        background: url('Rental-App-RA-Sign-Up-27-03-2025_15_15.jpg') no-repeat center center;
+        background: url("Rental-App-RA-Sign-Up-27-03-2025_15_15.jpg") no-repeat
+          center center;
         background-size: cover;
-    }
+      }
 
-    .card {
+      .card {
         width: 50%;
         padding: 40px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         background-color: #fff;
-    }
+        position: relative;
+      }
 
-    .card strong {
+      .card strong {
         font-size: 20px;
         margin-bottom: 10px;
         color: #333;
-    }
+      }
 
-    .card h3 {
+      .card h3 {
         font-size: 22px;
         color: #0056b3;
         margin-bottom: 10px;
-    }
+      }
 
-    .card p {
+      .card p {
         font-size: 11px;
-    color: #1a1919;
-    font-weight: 700;
-    margin-bottom: 92px;
-    }
+        color: #1a1919;
+        font-weight: 700;
+        margin-bottom: 25px;
+      }
 
-    .card a {
+      .otp-boxes {
+        display: flex;
+        gap: 15px;
+        justify-content: start;
+        margin-bottom: 20px;
+        margin-top: -10px;
+      }
+
+      .otp-boxes input {
+        width: 73px;
+        height: 58px;
+        font-size: 20px;
+        text-align: center;
+        border: 2px solid #dcdcdc;
+        border-radius: 8px;
+      }
+
+      .btn-primary {
+        font-size: 14px;
+        max-width: 35rem;
+        align-self: flex-start;
+        width: 22rem;
+      }
+
+      .card a {
         font-size: 14px;
         color: #0056b3;
         text-decoration: none;
-    }
+        margin-top: 15px;
+      }
 
-    .card a:hover {
+      .card a:hover {
         text-decoration: underline;
-    }
-    .square {
-  height: 50px;
-  width: 50px;
-  background-color: #555;
-}
+      }
 
-    @media (max-width: 768px) {
+      @media (max-width: 768px) {
         .content-wrapper {
-            flex-direction: column;
-            height: auto;
-            width: 90%;
+          flex-direction: column;
+          height: auto;
+          width: 90%;
         }
 
         .left-section,
         .card {
-            width: 100%;
+          width: 100%;
         }
 
         .left-section {
-            height: 200px;
+          height: 200px;
+        }
+        .btn-primary {
+          width: 100%;
         }
 
         .card {
-            padding: 25px;
+          padding: 25px;
         }
-    }
+
+        .otp-boxes {
+          justify-content: center;
+          gap: 10px;
+        }
+      }
     </style>
-
-<div class="content-wrapper">
-    <div class="left-section"></div>
-    <div class="card">
-        <strong>rental<span style="color: #0056b3;">app</span></strong>
+  </head>
+  <body>
+    <div class="content-wrapper">
+      <div class="left-section"></div>
+      <div class="card">
+        <strong>rental<span style="color: #0056b3">app</span></strong>
         <h3>OTP Verification</h3>
-        <p>To ensure security,enter the OTP sent to your registered email/phone. If you didn't request this, please ignore this message.</p>
-        <div class="square">
+        <p>
+          To ensure security, enter the OTP sent to your registered email/phone.
+          If you didn't request this, please ignore this message.
+        </p>
 
+        <div class="otp-boxes">
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
+          <input type="text" maxlength="1" />
         </div>
-        <a href="#">Go back to Sign In</a>
+
+        <button class="btn btn-primary">Confirm OTP</button>
+        <a href="#">Need help? Reach us on support@rentalapp.com</a>
+      </div>
     </div>
-</div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
