--- a/OTP_Veri/index.html
+++ b/OTP_Veri/index.html
@@ -53,9 +53,10 @@
       }
 
       .card h3 {
-        font-size: 22px;
+        font-size: 27px;
         color: #0056b3;
         margin-bottom: 10px;
+        font-weight: 600;
       }
 
       .card p {
@@ -134,7 +135,7 @@
     <div class="content-wrapper">
       <div class="left-section"></div>
       <div class="card">
-        <strong>rental<span style="color: #0056b3">app</span></strong>
+        <img src="/OTP_Veri/logo.jpg" alt="" width="121px" style="margin-block-end: auto;">
         <h3>OTP Verification</h3>
         <p>
           To ensure security, enter the OTP sent to your registered email/phone.
