--- a/HomePage/index.html
+++ b/HomePage/index.html
@@ -111,7 +111,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 shadow-sm">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="#">rental<span>app</span></a>
+            <a class="navbar-brand fw-bold" href="#"><img src="/HomePage/logo.jpg" alt=""></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
